syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerService {
  rpc registerPixKey(RegisterPixKeyRequest) returns (RegisterPixKeyResponse) {}
}

message RegisterPixKeyRequest {
  string clientId = 1;

  enum KeyType{
    UNKNOWN_KEY_TYPE = 0;
      CPF = 1;
      CELULAR = 2;
      EMAIL = 3;
      ALEATORIA = 4;
  }

  KeyType keyType = 2;
  string keyValue = 3;

  enum AccountType{
    UNKNOWN_ACCOUNT_TYPE = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
  }
  AccountType accountType = 4;
}

message RegisterPixKeyResponse {
  string clientId = 1;
  string pixKey = 2;
}
